tests/success/unaVaryUnMetodo.tds
integer aux;

void main(){return;}