tests/fail/test_type_error_00.tds
integer main(){
    integer y;
    y = true;
    return y;
}